<resources>
    <string name="app_name">Olive Young</string>

    <!-- Global -->
    <string name="more">더보기</string>

    <!-- Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_like">Like</string>
    <string name="menu_my">My</string>
    <string name="menu_hamburger_menu">Menu</string>

    <!-- Home -->
    <string name="home_menu_category">카테고리</string>
    <string name="home_menu_skincare">스킨케어</string>
    <string name="home_menu_bodycare">바디케어</string>
    <string name="home_menu_haircare">헤어케어</string>
    <string name="home_menu_makeup">메이크업</string>
    <string name="home_menu_perfume_and_diffuser">향수/디퓨저</string>
    <string name="home_menu_beauty_item">미용소품</string>
    <string name="home_menu_health_item">건강용품</string>
    <string name="home_menu_food">푸드</string>
    <string name="home_menu_life_and_home">라이프/홈</string>

    <!-- Detail -->
    <string name="detail_today_delivery">오늘드림</string>
    <string name="detail_buy_button_text">구매하기</string>
    <string name="detail_price_won">원</string>
    <string name="detail_price_won_format">%s원</string>
    <string name="detail_sale_percent_format">%d%%</string>
    <string name="detail_review_count_format">(%s)</string>
    <string name="detail_product_type">제품 타입</string>

    <string name="detail_tab_menu_product_detail">제품 상세</string>
    <string name="detail_tab_menu_review">리뷰</string>
    <string name="detail_tab_menu_QnA">Q&amp;A</string>
    <string name="detail_how_about_this_product">이 상품은 어떠세요?</string>
    <string name="detail_similar_product">방금 본 것과 유사한 상품이에요</string>
    <string name="detail_general_delivery">일반배송</string>
    <string name="detail_general_delivery_fee">2,500원</string>
    <string name="detail_today_delivery_fee">2,500원 / 5,000원</string>
    <string name="detail_delivery_fee_guide">(20,000 원 이상 무료배송)</string>
    <string name="detail_today_delivery_guide"><b>22분</b> 내 주문 시 <b>00시</b> 이내 도착해요</string>
    <string name="detail_search_store_available_for_purchase">구매가능 매장 확인하기</string>
    <string name="detail_open">영업중</string>
    <string name="detail_stock">재고보유 가능성 높음</string>
    <string name="home_recommend_product_title"><font color="##2f2f2f">김채령님</font>을 위한 추천상품!</string>
</resources>